# luckfox_rknn_usage

./: CMakeLists.txt  README.md  build.sh
src/: main.cc
